--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .background {
-    background: url('https://image.downhdwalls.com/image-sso/pubg-girl-cosplay-4k-94667-22.jpg') no-repeat center center/cover;
+    background: url('https://wallpapercave.com/wp/wp4027127.jpg') no-repeat center center/cover;
     position: absolute;
     top: -20px;
     bottom: -20px;
